# rosnix

./: .gitignore  README.md  build-ros-package.nix  default.nix  flake.nix  main-overlay.nix  overlay.nix  private-funcs.nix  ros-packages-overlay.nix  rosnix.toml  system-packages-overlay.nix
.github/: dependabot.yml
.github/workflows/: build-all.yml  build-and-deploy.yml  build-generator.yml  build.yml  create-sync-pr.yml  update.yml
ci/: apps.nix  outputs.nix
examples/custom-workspace-shell/: flake.nix
examples/workspace-shell/: flake.nix
generator/: Cargo.toml  default.nix  result  shell.nix
generator/src/: auto_patching.rs  cmake.rs  condition.lalrpop  condition.rs  config.rs  deps.rs  hunter.rs  main.rs  manifest.rs  nixgen.rs  rosindex.rs  source.rs
hooks/: setup-hook.nix  wrap-ros-qt-apps-hook.nix
hooks/setup-helper/: Cargo.toml
hooks/setup-helper/src/: main.rs
lib/: extend-mk-derivation.nix  make-recursive-builder.nix  make-source-set.nix  substitute-source.nix
overrides/: default.nix  python_qt_binding.patch
poetry/: pyproject.toml
ros-packages/: build-ros-package.nix  make-ros-workspace-shell.nix  overlay.nix  wrap-ros-application.nix
ros-packages/builders/: build-ament-cmake-package.nix  build-ament-python-package.nix  build-colcon-package.nix  make-ros-workspace-shell.nix
ros-packages/hooks/: concat-to-polyfill.nix  concat-to-polyfill.sh  ros-setup-helper.nix  ros-setup-hook.nix  ros-setup-hook.sh  wrap-ros-qt-apps-hook.sh
ros-packages/hooks/setup-helper/src/: main.rs
ros-packages/overrides/: ament-cmake-vendor-package.patch  default.nix  gz-common-filesystem.patch  gz-gui-style.patch  make-patch.nix  python_qt_binding.patch  update.bash
ros-packages/overrides/jazzy/cargo-hashes/: zenoh-cpp-vendor.nix
ros-packages/overrides/kilted/cargo-hashes/: zenoh-cpp-vendor.nix
ros-packages/overrides/patch-sources/nav2-costmap-2d/: CMakeLists.txt  costmap_plugins.xml
ros-packages/overrides/patch-sources/nav2-costmap-2d/plugins/: denoise_layer.cpp  filter_plugins.cpp  inflation_layer.cpp  layer_plugins.cpp  static_layer.cpp  (+4 more)
ros-packages/overrides/rolling/cargo-hashes/: zenoh-cpp-vendor.nix
scripts/: generate.sh
shims/: default.nix
system-packages/: freeimage.nix  overlay.nix
system-packages/lichtblick/: default.nix  missing-hashes.json  offline-cache-hash.txt  update.bash
system-packages/poetry/: pyproject.toml
system-packages/uv/: overlay.nix  pyproject.toml
system-packages/webots/: default.nix  setup-hook.sh
tests/: default.nix
tests/nixos/: x11.nix
(+4 files in other folders)
