[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
catkin-pkg = "^1.0.0"
flake8-quotes = "^3.4.0"
flake8-builtins = "^2.5.0"
rosdistro = "^0.9.1"
flake8-comprehensions = "^3.15.0"
colcon-common-extensions = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
